--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
+		
 		<!-- jackson-dataformat-xml -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
