--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,13 @@ spring.servlet.multipart.location=C:/Temp/upload
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 
-
+# 메일인증 관련 설정
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=yun123test@gmail.com
+spring.mail.password=yunTest123!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 
