--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,16 @@
 
 	<dependencies>
 	
+		
+			
+		  <!-- 구글 소셜 로그인 구현 -->
+		  <dependency>
+		    <groupId>org.springframework.social</groupId>
+		    <artifactId>spring-social-google</artifactId>
+		    <version>1.0.0.RELEASE</version>
+		  </dependency>
+		  <!-- 구글 소셜 로그인 구현 -->
+	
 		<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
 		<dependency>
 		    <groupId>javax.activation</groupId>
@@ -84,6 +94,7 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.1.4</version>
 		</dependency>
+		
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
