--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 
 	<dependencies>
 	
+		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+		<dependency>
+		    <groupId>org.mindrot</groupId>
+		    <artifactId>jbcrypt</artifactId>
+		    <version>0.4</version>
+		</dependency>
 		
 			
 		  <!-- 구글 소셜 로그인 구현 -->
