--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,8 +36,8 @@ spring.servlet.multipart.max-request-size=1000MB
 # 메일인증 관련 설정
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=yun123test@gmail.com
-spring.mail.password=yunTest123!
+spring.mail.username=자신의메일
+spring.mail.password=자신의비번
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
